force-app/main/default/objects/Coupon__c/fields/DiscountCode__c.field-meta.xml
<CustomField>
    <fullName>DiscountCode__c</fullName>
    <label>DiscountCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>