force-app/main/default/objects/Coupon__c/fields/ExternalReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalReferenceNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Reference Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>