force-app/main/default/objects/Coupon__c/fields/Integration_src__c.field-meta.xml
<CustomField>
    <fullName>Integration_src__c</fullName>
    <label>Integration src</label>
    <length>255</length>
    <type>Text</type>
</CustomField>