force-app/main/default/objects/Coupon__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Coupons (Membership)</relationshipLabel>
    <relationshipName>Coupons1</relationshipName>
    <type>Lookup</type>
</CustomField>