force-app/main/default/objects/Coupon__c/fields/OrderedBy__c.field-meta.xml
<CustomField>
    <fullName>OrderedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordered By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Coupons</relationshipLabel>
    <relationshipName>Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>