force-app/main/default/objects/Coupon__c/fields/ParentMembership__c.field-meta.xml
<CustomField>
    <fullName>ParentMembership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Coupons (Parent Membership)</relationshipLabel>
    <relationshipName>Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>