force-app/main/default/objects/Coupon__c/fields/PricebookEntry__c.field-meta.xml
<CustomField>
    <fullName>PricebookEntry__c</fullName>
    <label>PricebookEntry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>