force-app/main/default/objects/Coupon__c/fields/SeriesName__c.field-meta.xml
<CustomField>
    <fullName>SeriesName__c</fullName>
    <label>SeriesName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>