force-app/main/default/objects/Coupon__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>UnitPrice</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>